<resources>
    <string name="app_name">Hangman</string>
    <string name="title">Hang-Man</string>
    <string name="singleplayer">Single-Player</string>
    <string name="multiplayer">Multi-Player</string>
    <string name="boredButton">CLICK ME!</string>
    <string name="bored">BORED!</string>
    <string name="howtoplay">Guess the Word!</string>
    <string name="hangmanpic">hangman image</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="retryButton">Try Again!</string>
    <string name="player1">Player 1 :</string>
    <string name="player2">Player 2 :</string>
    <string name="start">START</string>
    <string name="goback">Back</string>
    <string name="next">NEXT</string>
    <string name="player1instruct">Player 1 Enter Word :</string>
</resources>
